--- a/src/Views/Home/Home.css
+++ b/src/Views/Home/Home.css
@@ -1,3 +1,41 @@
-.main h1{
-    color: var(--primary)
+.main h1 {
+  color: var(--primary);
+}
+
+.slide {
+  animation: slide-up 2s;
+}
+
+@keyframes slide-up {
+  from {
+    opacity: 0.1;
+    line-height: 400px;
+  }
+  to {
+    opacity: 1;
+    line-height: 35px;
+  }
+}
+
+.image {
+  /* The image used */
+  background-image: url(../../assets//images/study.jpg);
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+
+  /* width: 100vh; */
+  display: block;
+}
+
+.textbox {
+  
+  /* and for a full compatibility on older browsers like ie7-8-9 you can use the filter property  */
+  background-color: rgba(0, 0, 0, 0.5); /* where 0.5 means 50% opacity */
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#7F000000,endColorstr=#7F000000)"; /* IE8 */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#7F000000,endColorstr=#7F000000); /* IE6 & 7 */
+  zoom: 1;
 }
